<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/alliance_control"
            android:title="Alliances">
            <menu>
                <item
                    android:id="@+id/alliances"
                    android:icon="@drawable/ic_people_black_24dp"
                    android:title="My Alliances"></item>
                <item
                    android:id="@+id/invite"
                    android:icon="@drawable/ic_person_add_black_24dp"
                    android:title="Invite"></item>
            </menu>
        </item>

        <item
            android:id="@+id/game"
            android:title="Game">
            <menu>
                <item
                    android:id="@+id/game_land"
                    android:icon="@drawable/ic_directions_car_black_24dp"
                    android:title="@string/menu_land" />
                <item
                    android:id="@+id/game_airborne"
                    android:icon="@drawable/ic_flight_black_24dp"
                    android:title="@string/menu_airborne" />
                <item
                    android:id="@+id/game_sea"
                    android:icon="@drawable/ic_directions_boat_black_24dp"
                    android:title="@string/menu_sea" />
                <item
                    android:id="@+id/game_missiles"
                    android:icon="@drawable/ic_flare_black_24dp"
                    android:title="@string/menu_explosives" />
                <item
                    android:id="@+id/game_infastructure"
                    android:icon="@drawable/ic_account_balance_black_24dp"
                    android:title="@string/menu_infrastructure" />
            </menu>

        </item>
        <item
            android:id="@+id/configuration"

            android:title="Configuration">
            <menu>
                <item
                    android:id="@+id/utm"
                    android:icon="@drawable/ic_layers_black_24dp"
                    android:title="@string/menu_utm" />
                <item
                    android:id="@+id/sub_utm"
                    android:icon="@drawable/ic_layers_black_24dp"
                    android:title="@string/menu_subutm" />
                <item
                    android:id="@+id/encrypt"
                    android:icon="@drawable/ic_lock_outline_black_24dp"
                    android:title="@string/menu_encryption" />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/menu_settings" />
            </menu>

        </item>
    </group>
</menu>